--- a/gallery/index.html
+++ b/gallery/index.html
@@ -14,108 +14,108 @@
 
 <body>
 
-        <div class="container">
-                <div class="fab"><i class="fa fa-phone" aria-hidden="true"></i>
-                    <a href="../contact/">Contact Us</a>
-                </div>
-                <div class="topnav">
-                    <div>
-                        <a href="#">
-                            <img src="static/assets/logo.png" alt="Frescamer" class="logo">
-                        </a>
-                        <button class="openbtn" onclick="openNav()">☰</button>
-        
+    <div class="container">
+        <div class="fab">
+            <a href="../contact/"><i class="fa fa-phone" aria-hidden="true"></i><p>  Contact Us</p></a>
+        </div>
+        <div class="topnav">
+            <div>
+                <a href="#">
+                    <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
+                </a>
+                <button class="openbtn" onclick="openNav()">☰</button>
+
+            </div>
+
+        </div>
+        <div id="mySidepanel" class="sidepanel">
+            <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
+            <a href="../">Home</a>
+            <a href="../product/">Products</a>
+            <a href="../recipe/">
+                <p>Recipes</p>
+            </a>
+            <a href="../contact/">Contact Us</a>
+            <a href="../services/">Services</a>
+            <a href="#">Store Finder</a>
+            <a href="../gallery/">Gallery</a>
+
+        </div>
+        <div id="box">
+            <h1 id="pro">GALLERY</h1>
+
+
+            <div class="cardRow">
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/download_1.jpg')">
                     </div>
-        
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
                 </div>
-    <div id="mySidepanel" class="sidepanel">
-        <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
-        <a href="../">Home</a>
-        <a href="../product/">Products</a>
-        <a href="../recipe/">
-            <p>Recipes</p>
-        </a>
-        <a href="../contact/">Contact Us</a>
-        <a href="../services/">Services</a>
-        <a href="#">Store Finder</a>
-        <a href="../gallery/">Gallery</a>
-
-    </div>
-    <div id="box">
-        <h1 id="pro">GALLERY</h1>
-
-
-        <div class="cardRow">
-            <div class="card">
-                <div class="prodImg" style="background-image: url('./images/download_1.jpg')">
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/download_2.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
                 </div>
-                <div class="prodEtail">
-                    <p class="proName">products name</p>
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/download_3.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="prodImg" style="background-image: url('./images/download_2.jpg')">
+
+
+            <div class="cardRow">
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/download_4.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
                 </div>
-                <div class="prodEtail">
-                    <p class="proName">products name</p>
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/download_5.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/download_1.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="prodImg" style="background-image: url('./images/download_3.jpg')">
-                </div>
-                <div class="prodEtail">
-                    <p class="proName">products name</p>
-                </div>
-            </div>
+
+
         </div>
-
-
-        <div class="cardRow">
-            <div class="card">
-                <div class="prodImg" style="background-image: url('./images/download_4.jpg')">
+        <div class=footer>
+            <div class="pair">
+                <div class="footerLinks">
+                    <h3>LINKS</h3><br>
+                    <a href="../">Home</a><br>
+                    <a href="../product/">Products</a><br>
+                    <a href="../recipe/">Recipes</a><br>
+                    <a href="../contact/">Contact Us</a><br>
+                    <a href="../services/">Services</a><br>
+                    <a href="#">Store Finder</a><br>
+                    <a href="../gallery/">Gallery</a><br><br>
                 </div>
-                <div class="prodEtail">
-                    <p class="proName">products name</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="prodImg" style="background-image: url('./images/download_5.jpg')">
-                </div>
-                <div class="prodEtail">
-                    <p class="proName">products name</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="prodImg" style="background-image: url('./images/download_1.jpg')">
-                </div>
-                <div class="prodEtail">
-                    <p class="proName">products name</p>
+                <div class="footerDetails">
+                    <h3>ADDRESS</h3><br>
+                    <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br><br></p>
+                    <h3>CONTACT US</h3><br>
+                    <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br></p>
                 </div>
             </div>
-        </div>
-
-
-    </div>
-    <div class=footer>
-        <div class="pair">
-            <div class="footerLinks">
-                <h3>LINKS</h3><br>
-                <a href="../">Home</a><br>
-                <a href="../product/">Products</a><br>
-                <a href="../recipe/">Recipes</a><br>
-                <a href="../contact/">Contact Us</a><br>
-                <a href="../services/">Services</a><br>
-                <a href="#">Store Finder</a><br>
-                <a href="../gallery/">Gallery</a><br><br>
-            </div>
-            <div class="footerDetails">
-                <h3>ADDRESS</h3><br>
-                <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br><br></p>
-                <h3>CONTACT US</h3><br>
-                <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br></p>
-            </div>
-        </div>
-        Frescamer | Powered by Excel 2019</div>
+            Frescamer | Powered by Excel 2019</div>
 
 </body>
 
