--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 
     <div class="container">
-        <div class="fab"><i class="fa fa-phone" aria-hidden="true"></i>
-            <a href="contact/">Contact Us</a>
+        <div class="fab">
+            <a href="contact/"><i class="fa fa-phone" aria-hidden="true"></i><p>  Contact Us</p></a>
         </div>
         <div class="topnav">
             <div>
