--- a/recipe/index.html
+++ b/recipe/index.html
@@ -14,78 +14,78 @@
 
 <body>
 
-        <div class="container">
-                <div class="fab"><i class="fa fa-phone" aria-hidden="true"></i>
-                    <a href="../contact/">Contact Us</a>
+    <div class="container">
+        <div class="fab">
+            <a href="contact/"><i class="fa fa-phone" aria-hidden="true"></i><p>  Contact Us</p></a>
+        </div>
+        <div class="topnav">
+            <div>
+                <a href="#">
+                    <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
+                </a>
+                <button class="openbtn" onclick="openNav()">☰</button>
+
+            </div>
+
+        </div>
+
+        <div id="mySidepanel" class="sidepanel">
+            <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
+            <a href="../">Home</a>
+            <a href="../product/">Products</a>
+            <a href="../recipe/">
+                <p>Recipes</p>
+            </a>
+            <a href="../contact/">Contact Us</a>
+            <a href="../services/">Services</a>
+            <a href="#">Store Finder</a>
+            <a href="../gallery/">Gallery</a>
+
+        </div>
+
+
+
+        <div id="card-main">
+            <div id="prodImg-main">
+                <div id="close"></div>
+            </div>
+            <div class="prod-main">
+                <div class="prodEtail-main">
+                    <p id="proName-main"></p>
+                    <p class="price-main">&#8377 <span style="font-size: 30px;" id="rate"></span></p>
+                    <div id="star-main"></div>
+                    <p id="disp-main"></p>
                 </div>
-                <div class="topnav">
-                    <div>
-                        <a href="#">
-                            <img src="static/assets/logo.png" alt="Frescamer" class="logo">
-                        </a>
-                        <button class="openbtn" onclick="openNav()">☰</button>
-        
-                    </div>
-        
+            </div>
+        </div>
+        <div id="box">
+            <div class='bannerImage'><img src='../static/images/1.jpg'></div>
+            <div class="tbox">
+                <h1>RECIPES</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+            </div>
+        </div>
+        <div class=footer>
+            <div class="pair">
+                <div class="footerLinks">
+                    <h3>LINKS</h3><br>
+                    <a href="../">Home</a><br>
+                    <a href="../product/">Products</a><br>
+                    <a href="../recipe/">Recipes</a><br>
+                    <a href="../contact/">Contact Us</a><br>
+                    <a href="../services/">Services</a><br>
+                    <a href="#">Store Finder</a><br>
+                    <a href="../gallery/">Gallery</a><br><br>
                 </div>
-
-    <div id="mySidepanel" class="sidepanel">
-        <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
-        <a href="../">Home</a>
-        <a href="../product/">Products</a>
-        <a href="../recipe/">
-            <p>Recipes</p>
-        </a>
-        <a href="../contact/">Contact Us</a>
-        <a href="../services/">Services</a>
-        <a href="#">Store Finder</a>
-        <a href="../gallery/">Gallery</a>
-
-    </div>
-
-
-
-    <div id="card-main">
-        <div id="prodImg-main">
-            <div id="close"></div>
-        </div>
-        <div class="prod-main">
-            <div class="prodEtail-main">
-                <p id="proName-main"></p>
-                <p class="price-main">&#8377 <span style="font-size: 30px;" id="rate"></span></p>
-                <div id="star-main"></div>
-                <p id="disp-main"></p>
+                <div class="footerDetails">
+                    <h3>ADDRESS</h3><br>
+                    <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br><br></p>
+                    <h3>CONTACT US</h3><br>
+                    <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br></p>
+                </div>
             </div>
-        </div>
-    </div>
-    <div id="box">
-        <div class='bannerImage'><img src='../static/images/1.jpg'></div>
-        <div class="tbox">
-            <h1>RECIPES</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-        </div>
-    </div>
-    <div class=footer>
-        <div class="pair">
-            <div class="footerLinks">
-                <h3>LINKS</h3><br>
-                <a href="../">Home</a><br>
-                <a href="../product/">Products</a><br>
-                <a href="../recipe/">Recipes</a><br>
-                <a href="../contact/">Contact Us</a><br>
-                <a href="../services/">Services</a><br>
-                <a href="#">Store Finder</a><br>
-                <a href="../gallery/">Gallery</a><br><br>
-            </div>
-            <div class="footerDetails">
-                <h3>ADDRESS</h3><br>
-                <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br><br></p>
-                <h3>CONTACT US</h3><br>
-                <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br></p>
-            </div>
-        </div>
-        Frescamer | Powered by Excel 2019</div>
+            Frescamer | Powered by Excel 2019</div>
 
 </body>
 <script type="application/javascript" src='./JS/data.json'></script>
